# tadpole

./: .gitignore  INSTALL  Makefile.am  README  configure.ac
src/: Anomaly.cpp  Anomaly.h  Crc32.h  EvtLogParser.cpp  EvtLogParser.h  EvtxLogParser.cpp  EvtxLogParser.h  FileProcessor.cpp  FileProcessor.h  ILogParser.h  LogProcessor.cpp  LogProcessor.h  Makefile.am  Options.h  main.cpp
src/exceptions/: Exception.h
